--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <button onclick="calculate()" >=</button>
           </div>
         </div>
+        <small><kbd style="color: aliceblue; position: absolute; bottom: 10px;">Code with Mr.Hope</kbd></small>
       </div>
     </div>
 
